cloud/ops/flagger/flagger_pushlish/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
  labels:
    app: kubia
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9797"
      labels:
        app: kubia
    spec:
      containers:
      - name: kubia
        image: registry.cn-shenzhen.aliyuncs.com/haoyu36/kubia8080
        imagePullPolicy: IfNotPresent
        ports:
        - name: port
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
